[tool.poetry]
name = "job-scheduler"
version = "0.1.0"
description = "Provides an API to schedule jobs on external HTTP endpoints and utility endpoints to manage them."
authors = ["DieLinkeTools"]
license = ""
readme = "README.md"
packages = [
    { include = "job_scheduler" }
]

[tool.poetry.scripts]
job-scheduler-manage = "job_scheduler.scripts.cmdutil:app"

[tool.poetry.dependencies]
python = "^3.12"
uvicorn = { version = "^0.22.0", extras = ["standard"] }
loguru = "^0.6.0"
sqlalchemy = "^2.0.15"
asyncpg = "^0.30.0"
apscheduler = "^3.10.4"
psycopg = "^3.2.4"
aiohttp = "^3.11.14"
pydantic = "^2.10.6"
fastapi = "^0.115.12"
typer = "^0.15.2"
requests = "^2.32.3"

[tool.poetry.dev-dependencies]
pytest = "^7.3.1"
black = "^23.3.0"
isort = "^5.12.0"

[tool.poetry.group.dev.dependencies]
pre-commit = "^4.1.0"
mypy = "^1.15.0"
types-requests = "^2.32.0.20250306"
flake8 = "^7.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 79

[tool.isort]
profile = "black"
line_length = 79